[tool.poetry]
name = "SystemRDL-C-Header"
version = "0.1.0"
authors = []
description = "Generate a C header from a SystemRDL register definition, using systemrdl-compiler"

[tool.poetry.dependencies]
python = "^3.6"
systemrdl-compiler = "^1.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
